test/static/wrong/duplicate3.kk.out
test/static/wrong/duplicate3.kk(2, 1): warning: Type dup may be better declared as a value type for efficiency (e.g. 'value type/struct')
 or declare as a reference type (e.g. 'ref type/struct') to suppress this warning
test/static/wrong/duplicate3.kk(2,25): error: Constructor static/wrong/duplicate3/Dup1 is already defined at (2,13)