test/static/wrong/duplicate3.kk
// duplicate constructor
ref type dup {  Dup1(:int); Dup1(:int) }
